# mercury-motion

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/mmot-cli/: Cargo.toml
crates/mmot-cli/src/: audit_format.rs  completer.rs  diff_format.rs  main.rs  repl.rs  ui.rs
crates/mmot-cli/tests/: cli_test.rs
crates/mmot-core/: Cargo.toml  build.rs
crates/mmot-core/examples/: gen_schema.rs
crates/mmot-core/src/: accessibility.rs  batch.rs  diff.rs  error.rs  export.rs  lib.rs  pipeline.rs  props.rs  tokens.rs  visual_test.rs
crates/mmot-core/src/assets/: audio.rs  font.rs  image.rs  mod.rs  video.rs
crates/mmot-core/src/encoder/: audio.rs  av1.rs  ffmpeg_mux.rs  gif.rs  mod.rs  mp4.rs
crates/mmot-core/src/evaluator/: easing.rs  interpolate.rs  mod.rs  modifiers.rs
crates/mmot-core/src/parser/: mod.rs  validate.rs
crates/mmot-core/src/renderer/: blend.rs  effects.rs  gradient.rs  image.rs  layers.rs  masks.rs  mod.rs  shape.rs  solid.rs  surface.rs  text.rs  transition.rs
crates/mmot-core/src/schema/: animatable.rs  composition.rs  easing.rs  effects.rs  mod.rs  scene.rs  transform.rs  transition.rs
crates/mmot-core/tests/: generate_goldens.rs  golden_test.rs
crates/mmot-wasm/: Cargo.toml
crates/mmot-wasm/src/: lib.rs  renderer.rs
docs/business/: competitive-comparison.md  mercury-motion-business.md  monetisation-strategy.md
docs/chat-logs/: 2026-03-23-phase1-kickoff.mdx
docs/marketing/: mercury-motion-marketing.md
docs/superpowers/plans/: 2026-03-22-phase1-core-engine.md
docs/superpowers/specs/: 2026-03-22-remotion-rust-design.md  business-plan.md  color-science-skill-summary.md  filmtools-breakthroughs.md  marketing-strategy.md  mmot-json-format.md  skills-and-agents.md  technical-architecture.md
docs/technical/: integrations.md
editor/: index.html  package.json  vite.config.ts
editor/public/: golden_star.mmot.json
editor/src/: App.vue  style.css
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/src/: lib.rs
editor/src/components/: AddLayerDialog.vue  CanvasGizmos.vue  CanvasPreview.vue  EasingPicker.vue  EffectsPanel.vue  ExportModal.vue  KeyframeStrip.vue  LayerPanel.vue  MaskEditor.vue  MediaBrowser.vue  PropertyInspector.vue  Timeline.vue  TopBar.vue
editor/src/lib/: tauri-commands.ts
editor/src/stores/: scene.ts
examples/: badge-notification.mmot.json  call-to-action.mmot.json  countdown.mmot.json  gradient-wave.mmot.json  kinetic-text.mmot.json  loading-spinner.mmot.json  logo-reveal.mmot.json  lower-third.mmot.json  orbit.mmot.json  particle-burst.mmot.json  progress-bar.mmot.json  slideshow.mmot.json  social-intro.mmot.json  split-screen.mmot.json  text-glitch.mmot.json
mcp/: README.md  package-lock.json  package.json  server.js
npm/: install.js  package.json
schema/: mmot.schema.json
skills/mercury-motion/: SKILL.md
templates/: README.md
templates/business/: lower-third.mmot.json  presentation-title.mmot.json  stats-counter.mmot.json
templates/creative/: logo-placeholder.mmot.json  neon-text.mmot.json  particle-explosion.mmot.json
templates/social/: instagram-post.mmot.json  instagram-story.mmot.json  tiktok-overlay.mmot.json  youtube-intro.mmot.json
templates/transitions/: fade.mmot.json  wipe-left.mmot.json
templates/ui/: button-pulse.mmot.json  loading-dots.mmot.json  notification-badge.mmot.json  progress-bar.mmot.json
tests/fixtures/invalid/: bad_easing.mmot.json  missing_root.mmot.json  prop_type_mismatch.mmot.json
tests/fixtures/valid/: accessibility_contrast.mmot.json  accessibility_flash.mmot.json  ae_features.mmot.json  audio_mix.mmot.json  batch_data.csv  batch_template.mmot.json  diff_base.mmot.json  diff_modified.mmot.json  fcurve_modifiers.mmot.json  gradient.mmot.json  image_scale.mmot.json  minimal.mmot.json  safe_zone.mmot.json  sequence.mmot.json  shining_star.mmot.json  spring.mmot.json  star_animation.mmot.json  text_fade.mmot.json  tokens.mmot.json
