[workspace]
members = ["crates/mmot-core", "crates/mmot-cli", "editor/src-tauri"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
thiserror = "2"
anyhow = "1"
rayon = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
