[package]
name = "mmot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mmot"
path = "src/main.rs"

[dependencies]
mmot-core = { path = "../mmot-core" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
