[package]
name = "mmot-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
audio-codec = ["opus"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
skia-safe = { version = "0.82", features = ["textlayout"] }
rav1e = { version = "0.7", default-features = false, features = ["threading", "asm"] }
serde_path_to_error = "0.1"
muxide = "0.2"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "aac", "ogg", "vorbis", "pcm", "adpcm"] }
regex = "1"
gif = "0.13"
opus = { version = "0.3", optional = true }

[dev-dependencies]
pretty_assertions = "1"
image = { workspace = true }
