[package]
name = "mmot-core"
version = "0.1.0"
edition = "2024"
description = "Native Rust video creation engine — JSON to MP4/WebM/GIF, 100x faster than Remotion"
license = "MIT"
repository = "https://github.com/antutroll27/mercury-motion"
homepage = "https://github.com/antutroll27/mercury-motion"
keywords = ["video", "motion-graphics", "rendering", "animation", "encoder"]
categories = ["multimedia::video", "rendering", "graphics"]
readme = "../../README.md"

[features]
default = ["native-renderer"]
native-renderer = ["dep:skia-safe", "dep:rav1e", "dep:muxide", "dep:gif", "dep:symphonia"]
audio-codec = ["opus"]
ffmpeg = ["dep:ffmpeg-next", "dep:ffmpeg-sys-next"]

[dependencies]
# Always available (pure Rust, WASM-compatible)
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
serde_path_to_error = "0.1"
regex = "1"

# Native renderer dependencies (optional, not WASM-compatible)
skia-safe = { version = "0.82", features = ["textlayout"], optional = true }
rav1e = { version = "0.7", default-features = false, features = ["threading", "asm"], optional = true }
muxide = { version = "0.2", optional = true }
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "aac", "ogg", "vorbis", "pcm", "adpcm"], optional = true }
gif = { version = "0.13", optional = true }
opus = { version = "0.3", optional = true }
ffmpeg-next = { version = "8", optional = true }
ffmpeg-sys-next = { version = "8", optional = true, default-features = false }

[dev-dependencies]
pretty_assertions = "1"
image = { workspace = true }
