[package]
name = "mmot-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM browser renderer for Mercury-Motion — renders .mmot.json in the browser via tiny-skia"
license = "MIT"
repository = "https://github.com/antutroll27/mercury-motion"
homepage = "https://github.com/antutroll27/mercury-motion"
keywords = ["video", "wasm", "motion-graphics", "rendering", "browser"]
categories = ["wasm", "multimedia::video", "rendering"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mmot-core = { path = "../mmot-core", default-features = false }
wasm-bindgen = "0.2"
serde_json = "1"
tiny-skia = "0.11"
js-sys = "0.3"
