[package]
name = "mercury-motion-editor"
version = "0.1.0"
description = "Mercury-Motion Desktop Editor"
authors = ["antutroll27"]
license = "MIT"
repository = "https://github.com/antutroll27/mercury-motion"
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
base64 = "0.22"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
mmot-core = { path = "../../crates/mmot-core" }
